--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap");
+@import-normalize;
+
+:root {
+    --main-color: #2C2B64;
+    --main-shadow: 0 0 40px rgba(0, 0, 0, 0.25);
+    --main-gray: #2C2C2C;
+    --font-light: #D6D6D6;
+    --input-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
+    --imput-shadow-err: 0 10px 10px rgba(250, 89, 89, 0.56);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    margin: 0;
+    min-height: 100vh;
+    background-color: #2C2C2C;
+
+    font-family: "Roboto", sans-serif;
+    color: #D6D6D6;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+    font-family: inherit;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.appContainer{
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 20px 0 0;
 }
