--- a/src/components/Timer/TimerAdd/TimerAdd.module.css
+++ b/src/components/Timer/TimerAdd/TimerAdd.module.css
@@ -10,7 +10,17 @@
     box-shadow: var(--main-shadow);
 }
 
+.timerAddContainer h2{
+    font-weight: 500;
+    text-align: center;
+    margin: 0 0 10px;
+}
+
 .timerAddContainer label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     margin: 0 0 20px;
 
     font-weight: 400;
@@ -21,6 +31,7 @@
 .timerAddContainer input {
     width: 100%;
     margin: 0;
+    margin: 10px 0 0;
     padding: 5px 10px;
 
     background-color: var(--main-gray);
@@ -68,4 +79,20 @@
 
     font-size: 28px;
     color: #b03232;
+}
+
+.timer_add__time_container p {
+    margin: 0;
+
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+
+    text-align: center;
+}
+
+.timer_add__time {
+    display: flex;
+
+    gap: 20px;
 }
